5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1871_1711.log
== TEST (2019-07-02 16:14:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
	if(a[i]>=5):
		print("PASSOU")
	else:
		print("REPROVOU")
		
	
-- ERROR:
File "XXXX", line 7
    if(a[i]>=5):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:14:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:12) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(b.shape[0]):
	for j in range(b.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:29:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(b[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:30:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- EXECUTION TIME:
1.12091
-- TEST CASE 1:
---- input:
[[8.7,8.6,2.2],[5.3,8.0,4.9],[0.3,4.4,9.9]]
2
---- correct output:
REPROVOU
---- user output:
PASSOU
PASSOU
REPROVOU
PASSOU
PASSOU
REPROVOU
REPROVOU
REPROVOU
PASSOU
-- TEST CASE 2:
---- input:
[[9.5,0.5,8.1],[1.4,5.3,4.0],[9.4,2.6,2.7]]
1
---- correct output:
REPROVOU
---- user output:
PASSOU
REPROVOU
PASSOU
REPROVOU
PASSOU
REPROVOU
PASSOU
REPROVOU
REPROVOU
-- TEST CASE 3:
---- input:
[[6.8,8.2,9.5],[4.2,1.1,3.8],[8.4,7.9,8.1]]
2
---- correct output:
PASSOU
---- user output:
PASSOU
PASSOU
PASSOU
REPROVOU
REPROVOU
REPROVOU
PASSOU
PASSOU
PASSOU
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:40:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
print(a)
for i in range(a.shape[0]):
	
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
for i in range(a.shape[0]):
	for j in range(a.shape[1]):
		if(a[i,j]>=5):
			print("PASSOU")
		else:
			print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=[i,2]+1
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=[i,2]+1/a.shape[0]
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:46:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=[i,5]+1/a.shape[0]
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=[i,1]+1/a.shape[0]
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:50:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=a[i,1]+1/a.shape[0]
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:51:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=a[i,1]+c
	
print("PASSOU")
print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=a[i,1]+c
	if(c>=5):
	print("PASSOU")
	print("REPROVOU")
		
	
-- ERROR:
File "XXXX", line 9
    print("PASSOU")
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:53:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=a[i,1]+c
	if(c>=5):
		print("PASSOU")
		print("REPROVOU")
		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:54:39) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=(a[i,1]+c)a.shape[0]
	if(c>=5):
		print("PASSOU")
		print("REPROVOU")
		
	
-- ERROR:
File "XXXX", line 7
    c=(a[i,1]+c)a.shape[0]
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:54:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
a=array(eval(input("notas: ")))
b=int(input("n.alunos: "))
c=0
for i in range(a.shape[0]):
	c=(a[i,1]+c)shape(a)[0]
	if(c>=5):
		print("PASSOU")
		print("REPROVOU")
		
	
-- ERROR:
File "XXXX", line 7
    c=(a[i,1]+c)shape(a)[0]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
